# TerminalUtils

./: .gitignore  LICENSE  README.md  build.mjs  github-auth.js  install.ps1  install.psh  install.sh  new-version.js  new-version.ps1  new-version.py  new-version.sh  package-lock.json  package.json  pyproject.toml  repos.js  repos.py  requirements.txt  ssh-servers-handler.js  ssh-servers-handler.py  ssh-servers.ps1  ssh-servers.sh  tsconfig.json  tui.js  update_check.py  upload-handler.js  upload-handler.py  upload.ps1  upload.sh  util-handler.js  util.ps1  util.sh  util_handler.py
.github/workflows/: release.yml
src/core/: github-auth.js  github-auth.ts  new-version.js  new-version.ts  ports-handler.ts  ssh-servers-handler.js  ssh-servers-handler.ts  unlock-handler.ts  update-check.js  update-check.ts  upload-handler.js  upload-handler.ts  util-handler.ts
src/core/utils/: path.ts  repos.ts  tui.ts
src/scripts/: new-version  new-version.ps1  ports  ports.ps1  ssh-servers  ssh-servers.ps1  unlock  unlock.ps1  upload  upload.ps1  util  util.ps1
src/types/: ssh.d.ts
src/utils/: install.ps1  install.sh
